@@ -59,6 +59,7 @@ import com.google.devtools.common.options.OptionEffectTag;
 import com.google.devtools.common.options.OptionFilterDescriptions;
 import com.google.devtools.common.options.OptionMetadataTag;
 import com.google.devtools.common.options.OptionsBase;
+import com.google.devtools.common.options.OptionsClass;
 import com.google.devtools.common.options.OptionsParser;
 import com.google.devtools.common.options.OptionsParser.HelpVerbosity;
 import com.google.devtools.common.options.OptionsParsingResult;
@@ -76,7 +77,6 @@ import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 
 /** The 'blaze help' command, which prints all available commands as well as specific help pages. */
@@ -98,7 +98,9 @@ public final class HelpCommand implements BlazeCommand {
    */
   private static final Escaper HTML_ESCAPER = HtmlEscapers.htmlEscaper();
 
-  public static class Options extends OptionsBase {
+  /** Options for the {@code help} command. */
+  @OptionsClass
+  public abstract static class Options extends OptionsBase {
 
     @Option(
         name = "help_verbosity",
@@ -107,7 +109,7 @@ public final class HelpCommand implements BlazeCommand {
         documentationCategory = OptionDocumentationCategory.LOGGING,
         effectTags = {OptionEffectTag.TERMINAL_OUTPUT},
         help = "Select the verbosity of the help command.")
-    public OptionsParser.HelpVerbosity helpVerbosity;
+    public abstract OptionsParser.HelpVerbosity getHelpVerbosity();
 
     @Option(
         name = "long",
@@ -117,7 +119,7 @@ public final class HelpCommand implements BlazeCommand {
         documentationCategory = OptionDocumentationCategory.LOGGING,
         effectTags = {OptionEffectTag.TERMINAL_OUTPUT},
         help = "Show full description of each option, instead of just its name.")
-    public Void showLongFormOptions;
+    public abstract Void getShowLongFormOptions();
 
     @Option(
         name = "short",
@@ -126,7 +128,7 @@ public final class HelpCommand implements BlazeCommand {
         documentationCategory = OptionDocumentationCategory.LOGGING,
         effectTags = {OptionEffectTag.TERMINAL_OUTPUT},
         help = "Show only the names of the options, not their types or meanings.")
-    public Void showShortFormOptions;
+    public abstract Void getShowShortFormOptions();
   }
 
   @Override
@@ -155,29 +157,34 @@ public final class HelpCommand implements BlazeCommand {
       env.getReporter().handle(Event.error(message));
       return createFailureResult(message, Code.MISSING_ARGUMENT);
     }
-    String helpSubject = options.getResidue().get(0);
+    String helpSubject = options.getResidue().getFirst();
     String productName = runtime.getProductName();
     // Go through the custom subjects before going through Bazel commands.
     switch (helpSubject) {
-      case "startup_options":
+      case "startup_options" -> {
         emitBlazeVersionInfo(outErr, runtime.getProductName());
-        emitStartupOptions(outErr, helpOptions.helpVerbosity, runtime);
+        emitStartupOptions(outErr, helpOptions.getHelpVerbosity(), runtime);
         return BlazeCommandResult.success();
-      case "target-syntax":
+      }
+      case "target-syntax" -> {
         emitBlazeVersionInfo(outErr, runtime.getProductName());
         emitTargetSyntaxHelp(outErr, productName);
 
         return BlazeCommandResult.success();
-      case "info-keys":
+      }
+      case "info-keys" -> {
         emitInfoKeysHelp(env, outErr);
         return BlazeCommandResult.success();
-      case "flags-as-proto":
+      }
+      case "flags-as-proto" -> {
         emitFlagsAsProtoHelp(runtime, outErr);
         return BlazeCommandResult.success();
-      case "everything-as-html":
+      }
+      case "everything-as-html" -> {
         new HtmlEmitter(runtime).emit(outErr);
         return BlazeCommandResult.success();
-      default: // fall out
+      }
+      default -> {}
     }
 
     BlazeCommand command = runtime.getCommandMap().get(helpSubject);
@@ -190,7 +197,7 @@ public final class HelpCommand implements BlazeCommand {
     outErr.printOut(
         BlazeCommandUtils.getUsage(
             command.getClass(),
-            helpOptions.helpVerbosity,
+            helpOptions.getHelpVerbosity(),
             runtime.getOptionsSuppliers(),
             runtime.getRuleClassProvider(),
             productName));
@@ -200,8 +207,8 @@ public final class HelpCommand implements BlazeCommand {
 
   private static void emitBlazeVersionInfo(OutErr outErr, String productName) {
     String releaseInfo = BlazeVersionInfo.instance().getReleaseName();
-    String line = String.format("[%s %s]", productName, releaseInfo);
-    outErr.printOut(String.format("%80s\n", line));
+    String line = "[%s %s]".formatted(productName, releaseInfo);
+    outErr.printOut("%80s\n".formatted(line));
   }
 
   private void emitStartupOptions(
@@ -295,7 +302,7 @@ public final class HelpCommand implements BlazeCommand {
   private static void emitFlagsAsProtoHelp(BlazeRuntime runtime, OutErr outErr) {
     Map<String, BazelFlagsProto.FlagInfo.Builder> flags = new HashMap<>();
 
-    Predicate<OptionDefinition> allOptions = option -> true;
+    Predicate<OptionDefinition> allOptions = unused -> true;
     BiConsumer<String, OptionDefinition> visitor =
         (commandName, option) -> {
           if (ImmutableSet.copyOf(option.getOptionMetadataTags())
@@ -303,13 +310,13 @@ public final class HelpCommand implements BlazeCommand {
             return;
           }
           BazelFlagsProto.FlagInfo.Builder info =
-              flags.computeIfAbsent(option.getOptionName(), key -> createFlagInfo(option));
+              flags.computeIfAbsent(option.getOptionName(), unused -> createFlagInfo(option));
           info.addCommands(commandName);
         };
     Consumer<OptionsParser> startupOptionVisitor =
         parser -> parser.visitOptions(allOptions, option -> visitor.accept("startup", option));
     CommandOptionVisitor commandOptionVisitor =
-        (commandName, commandAnnotation, parser) ->
+        (commandName, unused, parser) ->
             parser.visitOptions(allOptions, option -> visitor.accept(commandName, option));
 
     visitAllOptions(runtime, startupOptionVisitor, commandOptionVisitor);
@@ -338,15 +345,11 @@ public final class HelpCommand implements BlazeCommand {
     }
 
     List<String> optionEffectTags =
-        Arrays.stream(option.getOptionEffectTags())
-            .map(Enum::toString)
-            .collect(Collectors.toList());
+        Arrays.stream(option.getOptionEffectTags()).map(Enum::toString).toList();
     flagBuilder.addAllEffectTags(optionEffectTags);
 
     List<String> optionMetadataTags =
-        Arrays.stream(option.getOptionMetadataTags())
-            .map(Enum::toString)
-            .collect(Collectors.toList());
+        Arrays.stream(option.getOptionMetadataTags()).map(Enum::toString).toList();
     flagBuilder.addAllMetadataTags(optionMetadataTags);
 
     if (option.getDocumentationCategory() != null) {
@@ -362,7 +365,7 @@ public final class HelpCommand implements BlazeCommand {
     }
 
     if (option.getOptionExpansion().length > 0) {
-      flagBuilder.addAllOptionExpansions(Arrays.asList(option.getOptionExpansion()));
+      flagBuilder.addAllOptionExpansions(ImmutableList.copyOf(option.getOptionExpansion()));
     }
 
     Converter<?> converter = option.getConverter();
@@ -372,8 +375,7 @@ public final class HelpCommand implements BlazeCommand {
           converterClassName.substring(0, converterClassName.length() - "Converter".length());
       flagBuilder.setTypeConverter(shortName);
     }
-    if (converter instanceof EnumConverter) {
-      EnumConverter<?> enumConverter = (EnumConverter) converter;
+    if (converter instanceof EnumConverter<?> enumConverter) {
       List<String> enumValues =
           Arrays.stream(enumConverter.getEnumType().getEnumConstants())
               .map(Object::toString)
@@ -425,21 +427,17 @@ public final class HelpCommand implements BlazeCommand {
   private static void emitInfoKeysHelp(CommandEnvironment env, OutErr outErr) {
     for (InfoItem item :
         InfoCommand.getInfoItemMap(env, OptionsParser.builder().build()).values()) {
-      outErr.printOut(String.format("%-23s %s\n", item.getName(), item.getDescription()));
+      outErr.printOut("%-23s %s\n".formatted(item.getName(), item.getDescription()));
     }
   }
 
   private static void emitGenericHelp(OutErr outErr, BlazeRuntime runtime) {
-    outErr.printOut(
-        String.format("Usage: %s <command> <options> ...\n\n", runtime.getProductName()));
+    outErr.printOut("Usage: %s <command> <options> ...\n\n".formatted(runtime.getProductName()));
     outErr.printOut("Available commands:\n");
 
-    Map<String, BlazeCommand> commandsByName = runtime.getCommandMap();
-    List<String> namesInOrder = new ArrayList<>(commandsByName.keySet());
-    Collections.sort(namesInOrder);
-
-    for (String name : namesInOrder) {
-      BlazeCommand command = commandsByName.get(name);
+    for (Map.Entry<String, BlazeCommand> entry : getSortedCommands(runtime).entrySet()) {
+      String name = entry.getKey();
+      BlazeCommand command = entry.getValue();
       Command annotation = command.getClass().getAnnotation(Command.class);
       if (annotation.hidden()) {
         continue;
@@ -447,21 +445,23 @@ public final class HelpCommand implements BlazeCommand {
 
       String shortDescription =
           annotation.shortDescription().replace("%{product}", runtime.getProductName());
-      outErr.printOut(String.format("  %-19s %s\n", name, shortDescription));
+      outErr.printOut("  %-19s %s\n".formatted(name, shortDescription));
     }
 
-    outErr.printOut("\n");
-    outErr.printOut("Getting more help:\n");
-    outErr.printOut(String.format("  %s help <command>\n", runtime.getProductName()));
-    outErr.printOut("                   Prints help and options for <command>.\n");
-    outErr.printOut(String.format("  %s help startup_options\n", runtime.getProductName()));
     outErr.printOut(
-        String.format(
-            "                   Options for the JVM hosting %s.\n", runtime.getProductName()));
-    outErr.printOut(String.format("  %s help target-syntax\n", runtime.getProductName()));
-    outErr.printOut("                   Explains the syntax for specifying targets.\n");
-    outErr.printOut(String.format("  %s help info-keys\n", runtime.getProductName()));
-    outErr.printOut("                   Displays a list of keys used by the info command.\n");
+        """
+
+        Getting more help:
+          %1$s help <command>
+                           Prints help and options for <command>.
+          %1$s help startup_options
+                           Options for the JVM hosting %1$s.
+          %1$s help target-syntax
+                           Explains the syntax for specifying targets.
+          %1$s help info-keys
+                           Displays a list of keys used by the info command.
+        """
+            .formatted(runtime.getProductName()));
   }
 
   private static final class HtmlEmitter {
